message("\t+ mesh-it-up components")

set(OT_PLATFORM "external" CACHE STRING "")
option(OT_BUILD_EXECUTABLES "" OFF)
option(BUILD_TESTING "" OFF)


if(CONFIG_MIU_DEVICE_TYPE_FTD)
    sdk_add_link_libraries(openthread-ftd)
    sdk_add_link_libraries(openthread-cli-ftd)
    option(OT_FTD "" ON)
    option(OT_MTD "" OFF)
    option(OT_RCP "" OFF)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL=OT_LOG_LEVEL_DEBG)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL_INIT=OT_LOG_LEVEL_NONE)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL_DYNAMIC_ENABLE=1)  
elseif(CONFIG_MIU_DEVICE_TYPE_MTD)
    sdk_add_link_libraries(openthread-mtd)
    sdk_add_link_libraries(openthread-cli-mtd)
    # add_definitions(-DOPENTHREAD_CONFIG_MAC_CSL_DEBUG_ENABLE=1)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL=OT_LOG_LEVEL_WARN)
    if(CONFIG_CONFIG_APP_THREAD_NETWORK_CHILD_TIMEOUT)
        add_definitions(-DOPENTHREAD_CONFIG_MLE_CHILD_TIMEOUT_DEFAULT=${CONFIG_APP_THREAD_NETWORK_CHILD_TIMEOUT})
        message("CONFIG_APP_THREAD_NETWORK_CHILD_TIMEOUT=${CONFIG_APP_THREAD_NETWORK_CHILD_TIMEOUT}")
    endif()
    option(OT_FTD "" OFF)
    option(OT_MTD "" ON)
    option(OT_RCP "" OFF)
elseif(CONFIG_MIU_DEVICE_TYPE_RCP)
    sdk_add_link_libraries(openthread-rcp)
    sdk_add_link_libraries(openthread-cli-radio)
    option(OT_FTD "" OFF)
    option(OT_MTD "" OFF)
    option(OT_RCP "" ON)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL=OT_LOG_LEVEL_DEBG)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL_INIT=OT_LOG_LEVEL_NONE)
    add_definitions(-DOPENTHREAD_CONFIG_LOG_LEVEL_DYNAMIC_ENABLE=1)  
endif()

sdk_add_include_directories(
    ${CMAKE_CURRENT_LIST_DIR}/miu_openthread/include/openthread
    ${CMAKE_CURRENT_LIST_DIR}/miu_openthread/include/openthread/platform
    ${CMAKE_CURRENT_LIST_DIR}/miu_openthread/src/core
    ${CMAKE_CURRENT_LIST_DIR}/miu_openthread/src/core/config
    ${CMAKE_CURRENT_LIST_DIR}/miu_openthread/src
    ${CMAKE_CURRENT_LIST_DIR}/miu_port/include
    
)

set(OT_PACKAGE_NAME "MIU_OPENTHREAD" CACHE STRING "OpenThread Package Name")
set(OT_PACKAGE_VERSION "8bc25042" CACHE STRING "OpenThread Package Version")

# mebtls configuration
add_compile_options(
    -I${CMAKE_CURRENT_LIST_DIR}/miu_port/include
    -I${CMAKE_CURRENT_LIST_DIR}/miu_openthread/third_party/mbedtls/repo/include
)
add_compile_options(
    -DMBEDTLS_AES_ALT=1
    -DMBEDTLS_SHA256_ALT=1
    -DMBEDTLS_ECJPAKE_ALT=1
    # -DMBEDTLS_DEBUG_C=1
)
# OpenThread configuration
add_compile_options(-DOPENTHREAD_CONFIG_PLATFORM_INFO="${CONFIG_CHIP}")
add_compile_options(
    -D__int64_t_defined=1
    -DOPENTHREAD_CONFIG_MAC_SOFTWARE_ACK_TIMEOUT_ENABLE=0
    -DOPENTHREAD_CONFIG_MAC_SOFTWARE_RETRANSMIT_ENABLE=0
    -DOPENTHREAD_CONFIG_MAC_SOFTWARE_CSMA_BACKOFF_ENABLE=0
    -DOPENTHREAD_CONFIG_MAC_SOFTWARE_TX_SECURITY_ENABLE=1
    -DOPENTHREAD_CONFIG_MAC_SOFTWARE_ENERGY_SCAN_ENABLE=1
    -DOPENTHREAD_CONFIG_MAC_CSL_RECEIVER_ENABLE=1
    -DOPENTHREAD_CONFIG_IP6_SLAAC_ENABLE=1
    -DOPENTHREAD_CONFIG_PLATFORM_USEC_TIMER_ENABLE=1
    -DOPENTHREAD_CONFIG_ECDSA_ENABLE=1
    -DOPENTHREAD_CONFIG_SRP_CLIENT_ENABLE=1
    -DOPENTHREAD_CONFIG_SRP_CLIENT_AUTO_START_API_ENABLE=1
    -DOT_FREERTOS_ENABLE=1
    -DOPENTHREAD_ENABLE_NCP_VENDOR_HOOK=0
    -DOPENTHREAD_PLATFORM_POSIX=0
    -DOPENTHREAD_POSIX=0
    -DOPENTHREAD_ENABLE_VENDOR_EXTENSION=0
    -DOPENTHREAD_CONFIG_MLE_LINK_METRICS_SUBJECT_ENABLE=1
    -DOPENTHREAD_CONFIG_NUM_MESSAGE_BUFFERS=120
    -DOPENTHREAD_CONFIG_COPROCESSOR_RPC_ENABLE=0
    -DOPENTHREAD_CONFIG_NCP_CPC_ENABLE=0
    -DOPENTHREAD_CONFIG_MAC_FILTER_ENABLE=1
    -DOPENTHREAD_CONFIG_REFERENCE_DEVICE_ENABLE=1
    -DOPENTHREAD_CONFIG_PLATFORM_ASSERT_MANAGEMENT=1
    -DOPENTHREAD_CONFIG_COMMISSIONER_ENABLE=1
    -DOPENTHREAD_CONFIG_JOINER_ENABLE=1
    -DOPENTHREAD_CONFIG_COAP_API_ENABLE=1
    -DOPENTHREAD_CONFIG_IP6_FRAGMENTATION_ENABLE=1
    #-DOPENTHREAD_CONFIG_PLATFORM_FLASH_API_ENABLE=1
    -Wimplicit-fallthrough=0 -Wno-switch-default
    -DOPENTHREAD_CONFIG_MLE_MAX_CHILDREN=16
)

add_definitions(
    -DOPENTHREAD_CONFIG_RADIO_2P4GHZ_OQPSK_SUPPORT=0
    -DOPENTHREAD_CONFIG_RADIO_915MHZ_OQPSK_SUPPORT=0
    -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_SUPPORT=1
    -DOPENTHREAD_CONFIG_DEFAULT_CHANNEL=1
    -DOPENTHREAD_CONFIG_MLE_ATTACH_BACKOFF_MINIMUM_INTERVAL=10000
    -DOPENTHREAD_CONFIG_MLE_ATTACH_BACKOFF_MAXIMUM_INTERVAL=180000
    -DOPENTHREAD_CONFIG_MLE_LINK_REQUEST_MARGIN_MIN=30
)

if(CONFIG_SUBG_FREQUENCY_BAND_433) #433-435(spacing 500)
    add_definitions(
        -DOPENTHREAD_CONFIG_CHANNEL_FREQUENCY=433000
        -DOPENTHREAD_CONFIG_CHANNEL_SPACING=500
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MASK=0x0000001f
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MIN=1
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MAX=4
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_PAGE=5
    )
elseif(CONFIG_SUBG_FREQUENCY_BAND_470) #470-510(spacing 2000)  
    add_definitions(
        -DOPENTHREAD_CONFIG_CHANNEL_FREQUENCY=470000
        -DOPENTHREAD_CONFIG_CHANNEL_SPACING=2000
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MASK=0x001fffff
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MIN=1
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MAX=20
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_PAGE=4
    )
elseif(CONFIG_SUBG_FREQUENCY_BAND_868) #863-870(spacing 500)
    add_definitions(
        -DOPENTHREAD_CONFIG_CHANNEL_FREQUENCY=868000
        -DOPENTHREAD_CONFIG_CHANNEL_SPACING=500
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MASK=0x00007fff
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MIN=1
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MAX=14
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_PAGE=3
    )
elseif(CONFIG_SUBG_FREQUENCY_BAND_915) #920-925(spacing 500), 915 MHZ range is (902~928), but Taiwan range is (920~925) 
    add_definitions(
        -DOPENTHREAD_CONFIG_CHANNEL_FREQUENCY=920000
        -DOPENTHREAD_CONFIG_CHANNEL_SPACING=500
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MASK=0x000007ff
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MIN=1
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_MAX=10
        -DOPENTHREAD_CONFIG_PLATFORM_RADIO_PROPRIETARY_CHANNEL_PAGE=2
    )
endif()

sdk_add_subdirectory_ifdef(CONFIG_BUILD_COMPONENT_MESH_IT_UP ${CMAKE_CURRENT_LIST_DIR}/miu_openthread)
sdk_add_subdirectory_ifdef(CONFIG_BUILD_COMPONENT_MESH_IT_UP ${CMAKE_CURRENT_LIST_DIR}/miu_port)
